# soft-plc-simulator

./: .gitignore  .mcp.json  ARCHITECTURE.md  CLAUDE.md  DECISIONS.md  DEVELOPMENT_RULES.md  MobileSoftPLC_MindMap.html  PROJECT_BRIEF.md  README.md  ROADMAP.md  SECURITY_AND_SAFETY.md  SHIPPING.md  install_portainer.bat  package-lock.json  package.json
.claude/: launch.json
Business Folder/: MobileSoftPLC_5YearStrategy.docx  MobileSoftPLC_AustralianBusinessGuide.docx  MobileSoftPLC_BusinessAnalysis.docx  MobileSoftPLC_DeploymentChecklist.docx
docs/: DEFERRED.md  diagnostics.md  fbd-networks.md  ld-editor.md  measurement-noise.md  mimo-coupled-plant.md  pid-autotune.md  sfc-branching.md  simulated-test-tags.md  task-scheduling.md  trends.md  ui-performance.md  valve-curves.md
docs/iec61131/: FUNCTION_BLOCKS.md  FUNCTION_BLOCK_DIAGRAM.md  LADDER_LOGIC.md  LANGUAGES.md  SEQUENTIAL_FUNCTION_CHART.md  STRUCTURED_TEXT.md
docs/import/: plcopen.md
docs/mobile/: COMPANION_GATEWAY.md  MOBILE_LIMITATIONS.md
docs/protocols/: DNP3.md  MODBUS_TCP.md  MQTT.md  OPC_UA.md  SCADA_VALIDATION.md  bacnet.md  ethernet-ip.md  fins.md  modbus.md  opcua.md  s7comm.md  slmp.md
docs/simulation/: IO_SIMULATION.md  PROCESS_SIMULATION.md
examples/projects/: basic_motor_start_stop.json  tank_level_simulation.json
examples/protocol-maps/: dnp3_map_example.json  modbus_map_example.json  mqtt_map_example.json  opcua_map_example.json
gateway/: Cargo.toml  README.md
gateway/examples/: dnp3_probe.rs  modbus_probe.rs  modbus_rtu_probe.rs  mqtt_probe.rs  opcua_probe.rs
gateway/examples/support/: sparkplug_pb.rs
gateway/proto/: sparkplug_b.proto
gateway/src/: lib.rs  main.rs  mirror.rs  opcua_map.rs  opcua_server.rs  sync.rs  ws_server.rs
mobile/: README.md  analysis_options.yaml  pubspec.yaml
mobile/android/: build.gradle.kts  gradle.properties
mobile/lib/: main.dart
mobile/linux/: CMakeLists.txt
mobile/test/: app_log_test.dart  app_logger_test.dart  app_responsive_smoke_test.dart  bacnet_bvll_test.dart  cip_map_test.dart  (+175 more)
runtime/: Cargo.toml  README.md
runtime/src/: instructions.rs  io_image.rs  lib.rs  program.rs  project.rs  runtime.rs  scan_engine.rs  tag.rs  timer.rs
runtime/src/st/: ast.rs  interpreter.rs  lexer.rs  mod.rs  parser.rs
scripts/: browser-check.mjs  serve-web.sh
shared/: README.md
tool/: bacnet_e2e.sh  dnp3_e2e.sh  enip_e2e.sh  fins_e2e.sh  modbus_e2e.sh  modbus_rtu_e2e.sh  mqtt_e2e.sh  opcua_e2e.sh  s7_e2e.sh  slmp_e2e.sh
(+354 files in other folders)
