[package]
name = "soft-plc-gateway"
version = "0.1.0"
edition = "2024"
description = "Dev-time harness of third-party reference protocol clients (OPC UA, Modbus, MQTT, DNP3) that machine-verify the app's in-app servers (ADR-010)"
license = "MIT OR Apache-2.0"

[dependencies]
soft-plc-runtime = { path = "../runtime" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "time", "io-util"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
opcua = { version = "0.12.0", features = ["server"] }

[dev-dependencies]
pretty_assertions = "1"
tokio-modbus = "0.17"
rumqttc = "0.25"
rumqttd = "0.20"
prost = "0.14"
dnp3 = { version = "1.6", default-features = false }
tracing = "0.1"
tracing-subscriber = "0.3"
