[package]
name = "soft-plc-runtime"
version = "0.1.0"
edition = "2024"
description = "Soft PLC runtime core - scan engine, tag database, and logic execution"
license = "MIT OR Apache-2.0"
repository = "https://github.com/JarrodFranz/soft-plc-simulator"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
pretty_assertions = "1"
